--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/profile_toolbar"
         style="@style/AppTheme.Profile.Toolbar"
         android:layout_width="match_parent"
+        app:elevation="4dp"
         android:layout_height="?attr/actionBarSize"
         app:title="@string/profile_toolbar_title" />
 
@@ -61,6 +61,7 @@
                             android:layout_height="wrap_content" />
 
                     </LinearLayout>
+
                 </FrameLayout>
 
                 <FrameLayout
@@ -91,11 +92,14 @@
                     android:focusable="false" />
 
             </LinearLayout>
+
         </ScrollView>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="6dp"
             android:background="@drawable/toolbar_shadow" />
+
     </FrameLayout>
+
 </LinearLayout>
