--- a/app/src/main/res/layout/compare_item_layout.xml
+++ b/app/src/main/res/layout/compare_item_layout.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/compare_item_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginTop="2dp"
-    app:cardCornerRadius="3dp"
+    android:layout_marginBottom="1dp"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginTop="1dp"
+    app:cardCornerRadius="1dp"
     app:cardElevation="4dp">
 
     <LinearLayout
@@ -15,19 +16,38 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/rv_tv_title"
-            android:layout_width="wrap_content"
+        <android.support.percent.PercentRelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:lines="1"
-            android:paddingBottom="10dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:paddingTop="10dp"
-            android:text="Which of laptops is better? I can't choose: samsung, HP or ASUS"
-            android:textColor="#000000"
-            android:textSize="16sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/rv_tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
+                android:paddingBottom="10dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="10dp"
+                android:text="Which of laptops is better? Help me choose guys"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_widthPercent="85%" />
+
+            <ImageView
+                android:id="@+id/rv_img_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/icon_more_selector" />
+
+        </android.support.percent.PercentRelativeLayout>
 
         <LinearLayout
             android:id="@+id/rv_ll_variants"
@@ -91,50 +111,25 @@
 
             </LinearLayout>
 
-            <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:orientation="vertical">-->
-
-            <!--<ImageView-->
-            <!--android:layout_width="100dp"-->
-            <!--android:layout_height="100dp"-->
-            <!--android:padding="8dp"-->
-            <!--android:src="@drawable/test_img" />-->
-
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:drawablePadding="2dp"-->
-            <!--android:drawableRight="@drawable/ic_favorite_black"-->
-            <!--android:gravity="center"-->
-            <!--android:padding="8dp"-->
-            <!--android:text="21"-->
-            <!--android:textColor="#000000"-->
-            <!--android:textSize="16sp" />-->
-
-            <!--</LinearLayout>-->
-
         </LinearLayout>
 
-        <RelativeLayout
+        <android.support.percent.PercentRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/rv_tv_author"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
                 android:paddingBottom="10dp"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:paddingTop="10dp"
-                android:text="Johny Depp"
+                android:text="Alexander Marinovskiy"
                 android:textColor="#000000"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:layout_widthPercent="50%" />
 
             <TextView
                 android:id="@+id/rv_tv_date"
@@ -149,7 +144,7 @@
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
-        </RelativeLayout>
+        </android.support.percent.PercentRelativeLayout>
 
     </LinearLayout>
 
