--- a/app/src/main/res/layout/compare_item_layout.xml
+++ b/app/src/main/res/layout/compare_item_layout.xml
@@ -53,7 +53,8 @@
             android:id="@+id/rv_ll_variants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:splitMotionEvents="false">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -69,12 +70,13 @@
                     android:padding="8dp"
                     android:src="@drawable/test_img" />
 
-                <TextView
+                <CheckBox
+                    android:id="@+id/rv_ch_like_first"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:button="@drawable/like_selector"
                     android:drawablePadding="2dp"
-                    android:drawableRight="@drawable/ic_favorite_black"
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="21"
@@ -97,12 +99,13 @@
                     android:padding="8dp"
                     android:src="@drawable/test_img" />
 
-                <TextView
+                <CheckBox
+                    android:id="@+id/rv_ch_like_second"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:button="@drawable/like_selector"
                     android:drawablePadding="2dp"
-                    android:drawableRight="@drawable/ic_favorite_black"
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="21"
