--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -96,6 +96,7 @@
         </ScrollView>
 
         <View
+            android:id="@+id/toolbar_shadow_profile"
             android:layout_width="match_parent"
             android:layout_height="6dp"
             android:background="@drawable/toolbar_shadow" />
