--- a/app/src/main/res/layout/compare_item_layout.xml
+++ b/app/src/main/res/layout/compare_item_layout.xml
@@ -1,153 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/compare_item_card_view"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/compare_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="1dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    android:layout_marginTop="1dp"
-    app:cardCornerRadius="1dp"
-    app:cardElevation="4dp">
+    android:layout_marginBottom="@dimen/card_margin_vertical"
+    android:layout_marginLeft="@dimen/card_margin_horizontal"
+    android:layout_marginRight="@dimen/card_margin_horizontal"
+    android:layout_marginTop="@dimen/card_margin_vertical"
+    android:clickable="true"
+    android:foreground="@drawable/card_foreground"
+    app:cardElevation="@dimen/card_elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/card_container_margin_bottom"
         android:orientation="vertical">
 
-        <android.support.percent.PercentRelativeLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginBottom="@dimen/card_content_large_margin"
+            android:layout_marginRight="@dimen/card_content_small_margin"
+            android:layout_marginTop="@dimen/card_content_large_margin">
 
-            <TextView
-                android:id="@+id/rv_tv_title"
+            <LinearLayout
+                android:id="@+id/compare_ll_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:paddingBottom="10dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:paddingTop="10dp"
-                android:text="Which of laptops is better? Help me choose guys"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_widthPercent="85%" />
+                android:layout_marginLeft="@dimen/card_content_large_margin"
+                android:background="@drawable/ll_selector"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/compare_iv_avatar"
+                    android:layout_width="@dimen/small_avatar_size"
+                    android:layout_height="@dimen/small_avatar_size"
+                    android:contentDescription="@string/img_description_avatar"
+                    android:src="@drawable/avatar_placeholder" />
+
+                <TextView
+                    android:id="@+id/compare_tv_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:ellipsize="end"
+                    android:maxEms="14"
+                    android:maxLines="1"
+                    android:paddingLeft="@dimen/card_content_large_padding"
+                    android:paddingRight="@dimen/card_content_large_padding"
+                    android:textColor="@color/colorTextLink"
+                    android:textSize="@dimen/medium_text_size"
+                    tools:text="Александр Мариновский" />
+
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/rv_img_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/icon_more_selector" />
+                android:layout_centerInParent="true"
+                android:background="@drawable/icon_more_selector"
+                android:contentDescription="@string/img_description_icon_more" />
 
-        </android.support.percent.PercentRelativeLayout>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/compare_tv_question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ellipsize="end"
+            android:maxEms="36"
+            android:maxLines="1"
+            android:paddingTop="@dimen/card_content_small_padding"
+            android:textColor="@color/colorTextPrimary"
+            android:textSize="@dimen/medium_text_size"
+            tools:text="Какая пицерия лучше?" />
 
         <LinearLayout
-            android:id="@+id/rv_ll_variants"
+            android:id="@+id/compare_ll_variants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/card_content_small_padding"
+            android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:splitMotionEvents="false">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginRight="@dimen/card_content_medium_margin"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/rv_iv_img_one"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:padding="8dp"
-                    android:src="@drawable/test_img" />
+                    android:id="@+id/compare_iv_first"
+                    android:layout_width="@dimen/small_image_size"
+                    android:layout_height="@dimen/small_image_size"
+                    android:padding="@dimen/card_content_large_padding"
+                    android:src="@drawable/stand_photo" />
+
+                <TextView
+                    android:id="@+id/compare_tv_first"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxEms="12"
+                    android:maxLines="1"
+                    android:paddingTop="@dimen/card_content_small_padding"
+                    android:textColor="@color/colorTextPrimary"
+                    android:textSize="@dimen/medium_text_size"
+                    tools:text="Феличита" />
 
                 <CheckBox
-                    android:id="@+id/rv_ch_like_first"
+                    android:id="@+id/compare_ch_like_first"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:button="@drawable/like_selector"
                     android:drawablePadding="2dp"
                     android:gravity="center"
-                    android:padding="8dp"
-                    android:text="21"
-                    android:textColor="#000000"
-                    android:textSize="16sp" />
+                    android:padding="@dimen/card_content_large_padding"
+                    android:textColor="@color/colorTextPrimary"
+                    android:textSize="@dimen/medium_text_size"
+                    tools:text="14" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/card_content_medium_margin"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/rv_iv_img_two"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:padding="8dp"
-                    android:src="@drawable/test_img" />
+                    android:id="@+id/compare_iv_second"
+                    android:layout_width="@dimen/small_image_size"
+                    android:layout_height="@dimen/small_image_size"
+                    android:padding="@dimen/card_content_large_padding"
+                    android:src="@drawable/stand_photo" />
+
+                <TextView
+                    android:id="@+id/compare_tv_second"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxEms="12"
+                    android:maxLines="1"
+                    android:paddingTop="@dimen/card_content_small_padding"
+                    android:textColor="@color/colorTextPrimary"
+                    android:textSize="@dimen/medium_text_size"
+                    tools:text="Неаполь" />
 
                 <CheckBox
-                    android:id="@+id/rv_ch_like_second"
+                    android:id="@+id/compare_ch_like_second"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:button="@drawable/like_selector"
                     android:drawablePadding="2dp"
                     android:gravity="center"
-                    android:padding="8dp"
-                    android:text="21"
-                    android:textColor="#000000"
-                    android:textSize="16sp" />
+                    android:padding="@dimen/card_content_large_padding"
+                    android:textColor="@color/colorTextPrimary"
+                    android:textSize="@dimen/medium_text_size"
+                    tools:text="12" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <android.support.percent.PercentRelativeLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/card_content_small_margin"
+            android:layout_marginLeft="@dimen/card_content_large_margin"
+            android:layout_marginRight="@dimen/card_content_large_margin"
+            android:layout_marginTop="@dimen/card_content_small_margin"
+            android:paddingBottom="@dimen/card_content_large_padding"
+            android:paddingTop="@dimen/card_content_large_padding">
 
             <TextView
-                android:id="@+id/rv_tv_author"
+                android:id="@+id/compare_tv_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:paddingBottom="10dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:paddingTop="10dp"
-                android:text="Alexander Marinovskiy"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_widthPercent="50%" />
+                android:textColor="@color/colorTextSecondary"
+                android:textSize="@dimen/medium_text_size"
+                tools:text="17th Jan 2016" />
 
             <TextView
-                android:id="@+id/rv_tv_date"
+                android:id="@+id/compare_tv_comments_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:paddingBottom="10dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:paddingTop="10dp"
-                android:text="17 Jan 2016"
-                android:textColor="#000000"
-                android:textSize="16sp" />
+                android:drawableLeft="@drawable/icon_comments"
+                android:drawablePadding="4dp"
+                android:gravity="center"
+                android:textColor="@color/colorTextSecondary"
+                android:textSize="@dimen/medium_text_size"
+                tools:text="14" />
 
-        </android.support.percent.PercentRelativeLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
