--- a/app/src/main/res/menu/menu_drawer_main.xml
+++ b/app/src/main/res/menu/menu_drawer_main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/action_nav_about"
         android:title="About" />
 
-    <!--<item-->
+    <!--<profile_item_layout-->
     <!--android:id="@+id/action_nav_help"-->
     <!--android:title="Logout" />-->
     <item
