--- a/app/src/main/res/layout/fragment_all_compares.xml
+++ b/app/src/main/res/layout/fragment_all_compares.xml
@@ -9,12 +9,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_all_compares"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorBackgroundPrimary"
-            android:scrollbars="none" />
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view_all_compares"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorBackgroundPrimary"
+                    android:scrollbars="none" />
+
+                <!--<Button-->
+                    <!--android:id="@+id/all_compares_btn_new_compares"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentBottom="true"-->
+                    <!--android:background="@drawable/button_style"-->
+                    <!--android:layout_centerHorizontal="true"-->
+                    <!--android:text="New compares are available! Click fo show" />-->
+
+            </RelativeLayout>
+
+        </FrameLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
