--- a/app/src/main/res/layout/activity_add_compare.xml
+++ b/app/src/main/res/layout/activity_add_compare.xml
@@ -35,8 +35,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginTop="10dp"
-                    android:textColorHint="#BDBDBD">
+                    android:layout_marginTop="12dp"
+                    android:textColorHint="#BDBDBD"
+                    android:textSize="@dimen/medium_text_size">
 
                     <EditText
                         android:id="@+id/add_compare_et_question"
@@ -51,58 +52,92 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="18dp"
                     android:text="Variants"
                     android:textColor="@color/colorTextPrimary"
-                    android:textSize="@dimen/medium_text_size" />
+                    android:textSize="18sp" />
 
-                <ImageView
-                    android:id="@+id/add_compare_first_img"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/standard_photo" />
-
-                <android.support.design.widget.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="10dp"
-                    android:textColorHint="#BDBDBD">
+                    android:layout_marginTop="12dp"
+                    android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/add_compare_et_first_variant"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Description" />
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
-                </android.support.design.widget.TextInputLayout>
+                        <ImageView
+                            android:id="@+id/add_compare_first_img"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/standard_photo" />
 
-                <ImageView
-                    android:id="@+id/add_compare_second_img"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/standard_photo" />
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginTop="10dp"
+                            android:textColorHint="#BDBDBD"
+                            android:textSize="@dimen/medium_text_size">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
+                            <EditText
+                                android:id="@+id/add_compare_et_first_variant"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="Description" />
+
+                        </android.support.design.widget.TextInputLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/add_compare_second_img"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/standard_photo" />
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginTop="10dp"
+                            android:textColorHint="#BDBDBD"
+                            android:textSize="@dimen/medium_text_size">
+
+                            <EditText
+                                android:id="@+id/add_compare_et_second_variant"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="Description" />
+
+                        </android.support.design.widget.TextInputLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/add_compare_category_spinner"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="10dp"
-                    android:textColorHint="#BDBDBD">
-
-                    <EditText
-                        android:id="@+id/add_compare_et_second_variant"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Description" />
-
-                </android.support.design.widget.TextInputLayout>
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="14dp"
+                    android:entries="@array/categories"
+                    android:minWidth="20dp"
+                    android:spinnerMode="dialog" />
 
             </LinearLayout>
 
